# food-menus-scraper

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
grab_scraper/: items.py  middlewares.py  pipelines.py  settings.py
grab_scraper/spiders/: grab_direct_api.py  grab_food.py  grab_single.py
grab_scraper/tests/: test_grab_food_spider.py  test_grab_single.py  test_items.py  test_middlewares.py  test_pipelines.py
